bugfix overflow scrolling

--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -93,7 +93,6 @@
       }
 
       .nav-menu {
-        display: block;
         display: flex;
         align-items: flex-end;
         flex-direction: column;
@@ -149,8 +148,7 @@
     }
 
     .nav-sidebar {
-      display: block;
-      position: absolute;
+      position: fixed;
       right: 0;
       top: 0;
       height: 100vh;
