--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,6 @@ html {
 body {
   font-family: 'Nunito Sans', sans-serif;
   box-sizing: border-box;
-  overflow-x: hidden;
 
   ::selection {
     color: #fff;
