--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,8 +1,8 @@
 @import '../../scss/main.scss';
 
 .home {
+  @include page-stype;
   background-color: $background-color;
-  overflow-x: hidden;
 
   .home-hero {
     background-color: $primary-color;
@@ -688,7 +688,11 @@
         margin-left: 0;
       }
     }
+  }
+}
 
+@media (max-width: 820px) {
+  .home {
     .home-contact {
       .container {
         .content {
@@ -831,14 +835,17 @@
 
       .main {
         .category {
+          border-radius: 15rem 10% 12rem 12rem;
+          padding: 2.6rem 2.6rem 0 2.6rem;
+
           .bubble {
-            width: 28.5rem;
-            height: 28.5rem;
+            width: 25rem;
+            height: 25rem;
           }
 
           .name {
-            font-size: 1.8rem;
-            margin: 2.5rem 0 3rem 0;
+            font-size: 1.6rem;
+            margin: 2rem 0 3rem 0;
           }
         }
 
