--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -15,3 +15,8 @@
   justify-content: space-evenly;
   align-items: center;
 }
+
+@mixin page-stype {
+  min-height: 100vh;
+  overflow-x: hidden;
+}
